sumo/tests/traci/MoveNode/InvalidPositionFormat/errors.traci
Error: Answered with error to command 1: Error: unsupported return format requested.
Error while receiving command: tcpip::Socket::receive() @ recv: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
